tests/snapshots/snapshots__interpreter@rewrite_strategies.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/rewrite_strategies.pr
---
(1 (1 3) 1)
(2 (2 3) 2)
(2 (1 3) 1)
(2 (1 3) 1)
(2 (2 3!) 2)
(1 (1 3) 1)
(2 (1 3) 1)
(1 (1 3) 1)
(2 (2 3) 2) 3 true
77777777 3 false
["(2 (1 3) 1)", "(1 (2 3) 1)", "(1 (1 3) 2)"]
4
(1@0 (1@1 3@2) 1@3)
=> ()
