tests/snapshots/snapshots__interpreter@rollback.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/rollback.pr
---
6
11
6
6
11
-2
=> ()
