tests/snapshots/snapshots__interpreter@row_widen_task_list.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/row_widen_task_list.pr
---
63
=> ()
