tests/snapshots/snapshots__interpreter@row_widen_user_effect.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/row_widen_user_effect.pr
---
21
=> ()
