tests/snapshots/snapshots__interpreter@scc_effect_row.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/scc_effect_row.pr
---
42
=> ()
