tests/snapshots/snapshots__interpreter@scientific.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/scientific.pr
---
1000
1000
1500
0.01
0.01
true
-100
2.9
=> ()
