tests/snapshots/snapshots__interpreter@sequence_pull.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/sequence_pull.pr
---
[1, 2, 3, 4, 5]
[10, 20, 30]
[1, 2, 4, 8, 16]
[7, 7, 7]
[99]
[]
[0, 1, 4, 9]
["1", "2", "3"]
[2, 4, 6, 8, 10]
[20, 40]
[1, 2, 7, 8]
[0, 0, 1, 0, 1, 2]
[4, 5, 6, 7]
[1, 2, 3, 4]
[4, 5, 6, 7]
[1, 2, 3, 1]
[0, 1, 3, 6, 10]
[(0, "a"), (1, "b"), (2, "c")]
[1, 10, 2, 11, 3, 12, 13, 14]
[(1, "10"), (2, "11"), (3, "12")]
[101, 202, 303]
[[1, 2, 3], [4, 5, 6], [7]]
[[1, 2, 3], [2, 3, 4], [3, 4, 5]]
5050
120
42
Some(5)
Some(51)
true
false
100
200
300
[104, 105, 33]
=> ()
