tests/snapshots/snapshots__interpreter@sequence_with_handler.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/sequence_with_handler.pr
---
46
12
[1, 4, 9, 16]
=> ()
