tests/snapshots/snapshots__interpreter@shadow_prelude.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/shadow_prelude.pr
---
1000
=> ()
